--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,20 @@ services:
         # Command, which is used to run our application in our Docker container
         # 0.0.0.0:8000: All the IP addresses that run on the Docker container on port 8000
         command: >
-            sh -c "python manage.py runserver 0.0.0.0:8000"
+            sh -c "python manage.py wait_for_db &&
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000"
+        environment: 
+            - DB_HOST=db
+            - DB_NAME=app
+            - DB_USER=postgres
+            - DB_PASS=postgres
+        depends_on: 
+            - db
+
+    db:
+        image: postgres:10-alpine
+        environment: 
+            - POSTGRES_DB=app
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
