--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.2.3
 djangorestframework==3.12.4
 flake8==3.9.2
 mccabe==0.6.1
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
