--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+appdirs==1.4.4
 asgiref==3.3.4
+cfgv==3.3.0
+distlib==0.3.1
 Django==3.2.3
 djangorestframework==3.12.4
+filelock==3.0.12
 flake8==3.9.2
+identify==2.2.5
 mccabe==0.6.1
+nodeenv==1.6.0
+pre-commit==2.12.1
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
+PyYAML==5.4.1
+six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
+virtualenv==20.4.6
+Werkzeug>=0.10.1
