--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ flake8==3.9.2
 identify==2.2.5
 mccabe==0.6.1
 nodeenv==1.6.0
+Pillow==8.2.0
 pre-commit==2.12.1
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
@@ -19,4 +20,4 @@ six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 virtualenv==20.4.6
-Werkzeug>=0.10.1
+Werkzeug==2.0.1
